--- a/about/index.html
+++ b/about/index.html
@@ -7,11 +7,15 @@ title: About Hank Quinlan
 			<h1>About</h1>
 			<p>
 			I have over 17 years of experience working as a database administrator and UNIX sysadmin. 
-			Currently,
+			Currently,</p>
+			<p>
 			I work as Senior Data consultant, helping our customers to assemble their datacenter by helping to design the scheme,
-			choose the right database, find security compliance solutions and also assemble the final solution.
+			choose the right database, find security compliance solutions and also assemble the final solution.	
+		    </p>
+			<p>
 			Competencies: Oracle, MySQL, PostgreSQL, MongoDB, Elasticsearch, Spatial, Security (Compliance, SSO),
-			 Shell Programming (bash, Perl), Java, Pl/SQL, High-performance LDAP servers</p>
+			 Shell Programming (bash, Perl), Java, Pl/SQL, High-performance LDAP servers
+			</p>
 			<ul class="contacts">
 				<li><a href="@baruchoso">@TwitterHandle</a></li>
 				<li><a href="https://www.linkedin.com/in/baruch-osoveskiy-8887ab9">Linkedin</a></li>
