--- a/about/index.html
+++ b/about/index.html
@@ -6,10 +6,8 @@ title: About Hank Quinlan
 		<div class="about">
 			<h1>About</h1>
 			<p>
-			I have over 17 years of experience working as a database administrator and UNIX sysadmin. 
-			Currently,</p>
-			<p>
-			I work as Senior Data consultant, helping our customers to assemble their datacenter by helping to design the scheme,
+			I have over 17 years of experience working as a database administrator and UNIX sysadmin. </p>
+			<p>Currently,I work as Senior Data consultant, helping our customers to assemble their datacenter by helping to design the scheme,
 			choose the right database, find security compliance solutions and also assemble the final solution.	
 		    </p>
 			<p>
