--- a/about/index.html
+++ b/about/index.html
@@ -5,14 +5,17 @@ title: About Hank Quinlan
 
 		<div class="about">
 			<h1>About</h1>
+			<h2>My Name Is Baruch baruch osoveskiy</h2>
 			<p>
-			I have over 17 years of experience working as a database administrator and UNIX sysadmin. </p>
-			<p>Currently,I work as Senior Data consultant, helping our customers to assemble their datacenter by helping to design the scheme,
-			choose the right database, find security compliance solutions and also assemble the final solution.	
+			I have over 17 years of experience working as a database administrator and UNIX sysadmin.
 		    </p>
 			<p>
-			Competencies: Oracle, MySQL, PostgreSQL, MongoDB, Elasticsearch, Spatial, Security (Compliance, SSO),
-			 Shell Programming (bash, Perl), Java, Pl/SQL, High-performance LDAP servers
+			Currently,I work as Senior Data consultant, aiding our customers to assemble their datacenter by helping to choose the right database
+			design the scheme find security compliance solutions and also assemble the final solution.	
+		    </p>
+			<p>
+			competencies: Oracle, MySQL, PostgreSQL, MongoDB, Elasticsearch, Oracle and PostGIS Spatial, Security (Compliance, SSO),
+			Shell Programming (bash, Perl), Java, Pl/SQL, High-performance LDAP servers,Oracle Identity Mangment
 			</p>
 			<ul class="contacts">
 				<li><a href="@baruchoso">@TwitterHandle</a></li>
