--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@ title: About Hank Quinlan
 		    </p>
 			<p>
 			competencies: Oracle, MySQL, PostgreSQL, MongoDB, Elasticsearch, Oracle and PostGIS Spatial, Security (Compliance, SSO),
-			Shell Programming (bash, Perl), Java, Pl/SQL, High-performance LDAP servers,Oracle Identity Mangment
+			Shell Programming (bash, Perl), Java, Pl/SQL, High-performance LDAP servers,Oracle Identity Management
 			</p>
 			<ul class="contacts">
 				<li><a href="@baruchoso">@TwitterHandle</a></li>
