--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ title: About Hank Quinlan
 
 		<div class="about">
 			<h1>About</h1>
-			<h2>My Name Is Baruch baruch osoveskiy</h2>
+			<b>My Name Is Baruch Osoveskiy</b>
 			<p>
 			I have over 17 years of experience working as a database administrator and UNIX sysadmin.
 		    </p>
