--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ title: About Hank Quinlan
 
 		<div class="about">
 			<h1>About</h1>
-			<b>My Name Is Baruch Osoveskiy</b>
+			<p>My Name Is Baruch Osoveskiy</p>
 			<p>
 			I have over 17 years of experience working as a database administrator and UNIX sysadmin.
 		    </p>
@@ -18,7 +18,8 @@ title: About Hank Quinlan
 			Shell Programming (bash, Perl), Java, Pl/SQL, High-performance LDAP servers,Oracle Identity Management
 			</p>
 			<ul class="contacts">
-				<li><a href="@baruchoso">@TwitterHandle</a></li>
+				<li><a href="https://twitter.com/baruchoso" class="twitter-follow-button" data-show-count="false">Follow @baruchoso</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></li>
+			<!--	<li><a href="@baruchoso">@baruchos TwitterHandle</a></li> -->
 				<li><a href="https://www.linkedin.com/in/baruch-osoveskiy-8887ab9">Linkedin</a></li>
 				<li><a href="https://www.slideshare.net/baruchosoveskiy">Slideshare</a></li>
 				</ul>
