--- a/about/index.html
+++ b/about/index.html
@@ -18,9 +18,8 @@ title: About Hank Quinlan
 			Shell Programming (bash, Perl), Java, Pl/SQL, High-performance LDAP servers,Oracle Identity Management
 			</p>
 			<ul class="contacts">
-				<li><a href="https://twitter.com/baruchoso" class="twitter-follow-button" data-show-count="false">Follow @baruchoso</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></li>
-			<!--	<li><a href="@baruchoso">@baruchos TwitterHandle</a></li> -->
-				<li><a href="https://www.linkedin.com/in/baruch-osoveskiy-8887ab9">Linkedin</a></li>
-				<li><a href="https://www.slideshare.net/baruchosoveskiy">Slideshare</a></li>
+				<a href="https://twitter.com/baruchoso" class="twitter-follow-button" data-show-count="false">Follow @baruchoso</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<a href="https://www.linkedin.com/in/baruch-osoveskiy-8887ab9">Linkedin</a>
+				<a title="View baruchosoveskiy’s profile on slideshare" href="http://www.slideshare.net/baruchosoveskiy" ><img src="//public.slidesharecdn.com/images/badge150X25px_dark.png" width="150" height="25" alt="View baruchosoveskiy’s profile on slideshare" /></a>				
 				</ul>
 		</div>
