--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,6 @@ title: About Hank Quinlan
 			</p>
 			<ul class="contacts">
 				<a href="https://twitter.com/baruchoso" class="twitter-follow-button" data-show-count="false">Follow @baruchoso</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-				<a href="https://www.linkedin.com/in/baruch-osoveskiy-8887ab9">Linkedin</a>
-				<a title="View baruchosoveskiy’s profile on slideshare" href="http://www.slideshare.net/baruchosoveskiy" ><img src="//public.slidesharecdn.com/images/badge150X25px_dark.png" width="150" height="25" alt="View baruchosoveskiy’s profile on slideshare" /></a>				
+				<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="baruch-osoveskiy-8887ab9"><a class="LI-simple-link" href='https://il.linkedin.com/in/baruch-osoveskiy-8887ab9?trk=profile-badge'>Baruch Osoveskiy</a></div>				<a title="View baruchosoveskiy’s profile on slideshare" href="http://www.slideshare.net/baruchosoveskiy" ><img src="//public.slidesharecdn.com/images/badge150X25px_dark.png" width="150" height="25" alt="View baruchosoveskiy’s profile on slideshare" /></a>				
 				</ul>
 		</div>
