--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@ title: About Hank Quinlan
 			<ul class="contacts">
 				<a href="https://twitter.com/baruchoso" class="twitter-follow-button" data-show-count="false">Follow @baruchoso</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-				<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/baruch-osoveskiy-8887ab9" data-format="hover" data-related="false" data-text="Baruch Osoveskiy"></script>		
+				<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/baruch-osoveskiy-8887ab9" data-format="hover" data-related="false" data-text=""></script>		
 				<a title="View baruch on slideshare" href="http://www.slideshare.net/baruchosoveskiy" ><img src="//public.slidesharecdn.com/images/badge150X25px_dark.png" width="150" height="25" alt="View baruchosoveskiy’s profile on slideshare" /></a>				
 				</ul>
 		</div>
