--- a/about/index.html
+++ b/about/index.html
@@ -10,12 +10,11 @@ title: About Hank Quinlan
 			I have over 17 years of experience working as a database administrator and UNIX sysadmin.
 		    </p>
 			<p>
-			Currently,I work as Senior Data consultant, aiding our customers to assemble their datacenter by helping to choose the right database
-			design the scheme find security compliance solutions and also assemble the final solution.	
+			Currently,I work as Senior Data consultant, aiding our customers to assemble their datacenter by helping to choose the right databas,
+			design the scheme and find security compliance solutions and also assemble the final solution.	
 		    </p>
 			<p>
-			competencies: Oracle, MySQL, PostgreSQL, MongoDB, Elasticsearch, Oracle and PostGIS Spatial, Security (Compliance, SSO),
-			Shell Programming (bash, Perl), Java, Pl/SQL, High-performance LDAP servers,Oracle Identity Management
+			Competencies: Oracle, MySQL, PostgreSQL, MongoDB, Elasticsearch, Oracle Spatial and PostGIS, Security (Compliance, SSO), Shell Programming (bash, Perl, Python), Java, Pl/SQL, High-performance LDAP servers, Oracle Identity Managemen
 			</p>
 			<ul class="contacts">
 				<a href="https://twitter.com/baruchoso" class="twitter-follow-button" data-show-count="false">Follow @baruchoso</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
