--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ layout: default
 title: Baruch Osoveskiy
 ---
 
-		<div class="blurb">
-			<h1>My Blog</h1>
-			<p></p>
-		</div> 
+	<div class="blurb">
+		<h1>My Blog</h1>
+		<p></p>
+	</div> 
+
+	This blog is about Open Source Databases and Technology 
+	
