--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: About Hank Quinlan
+title: About Baruch Assif Osoveskiy
 ---
 
 		<div class="about">
 			<h1>About</h1>
 			<p>My Name Is Baruch Osoveskiy</p>
 			<p>
-			I have over 17 years of experience working as a database administrator and UNIX sysadmin.
+			I have over 20 years of experience working as a database administrator and UNIX sysadmin.
 		    </p>
 			<p>
 			Currently,I work as Senior Data consultant, aiding our customers to assemble their datacenter by helping to choose the right databas,
