--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 ---
 layout: default
-title: Baruch Osoveskiy
+title: Baruch Assif Osoveskiy
 ---
 
 	<div class="blurb">
-		<h1>My Blog</h1>
+		<h1>Big Tables</h1>
 		<p></p>
 	</div> 
 
-	This blog is about Open Source Databases and Technology 
+	This "blog" is My Place to write about Technology Open Source Databases and Food.
+
 	
